find_package(fmt REQUIRED)
file(GLOB_RECURSE LIB_SRCS *.cpp)
list(FILTER LIB_SRCS EXCLUDE REGEX "\\.test\\.cpp$")
list(FILTER LIB_SRCS EXCLUDE REGEX "\\.bench\\.cpp$")
list(FILTER LIB_SRCS EXCLUDE REGEX "\\.fuzz\\.cpp$")
add_library(lib OBJECT ${LIB_SRCS})
target_precompile_headers(lib PUBLIC ${LIB_HDRS})
target_include_directories(lib PUBLIC .)
target_link_libraries(lib PUBLIC fmt::fmt)
