find_package(PkgConfig REQUIRED)
find_package(fmt REQUIRED)
pkg_check_modules(SODIUM REQUIRED libsodium>=1.0.18)
file(GLOB_RECURSE LIB_SRCS *.cpp)
list(FILTER LIB_SRCS EXCLUDE REGEX "\\.test\\.cpp$")
list(FILTER LIB_SRCS EXCLUDE REGEX "\\.bench\\.cpp$")
list(FILTER LIB_SRCS EXCLUDE REGEX "\\.fuzz\\.cpp$")
add_library(lib OBJECT ${LIB_SRCS})
target_precompile_headers(lib PUBLIC ${LIB_HDRS})
target_include_directories(lib PUBLIC .)
target_link_libraries(lib PUBLIC fmt::fmt ${SODIUM_LIBRARIES})
target_link_directories(lib PUBLIC ${SODIUM_LIBRARY_DIRS})
